phase(s4/7): people read models (roster, detail, pet people) (#1518)
* chore(plan): s4-read-models in progress


* phase(s4/7): feat: people read models roster detail and pet people


* chore(plan): mark s4-read-models complete


* chore(plan): register s4 PR #1518


---------
